--- a/Fronteira_Eficiente_de_Markowitz.ipynb
+++ b/Fronteira_Eficiente_de_Markowitz.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "**Fronteira Eficiente de Markowitz**\n",
         "\n",
-        "Neste exercicio de simulação computacional, irei modelar a fronteira eficiente de Markovitz considerado um portfólio contendo dois ativos: ABEV3 e BOVA11."
+        "Neste exercicio de simulação computacional, irei modelar a fronteira eficiente de Markovitz considerando um portfólio contendo dois ativos: ABEV3 e BOVA11."
       ],
       "metadata": {
         "id": "WfGyIUw7nSMz"
@@ -701,7 +701,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "O retorno médio esperado do portfólio é igual a aproximadamente 6%."
+        "O retorno médio esperado do portifólio é igual a aproximadamente 6%."
       ],
       "metadata": {
         "id": "qDJlVS5k20nC"
@@ -710,7 +710,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Variancia do retorno esperado do portfólio"
+        "Variância do retorno esperado do portifólio"
       ],
       "metadata": {
         "id": "JRNePDGd2UXa"
@@ -745,7 +745,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "A variância esperada do portfólio é igual a aproximadamente 5%."
+        "A variância esperada do portifólio é igual a aproximadamente 5%."
       ],
       "metadata": {
         "id": "i0SA2OzW3Ds8"
@@ -754,7 +754,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Volatilidade esperada do retorno do portfólio"
+        "Volatilidade esperada do retorno do portifólio"
       ],
       "metadata": {
         "id": "JRHgNgyx4fYE"
@@ -1067,7 +1067,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "O retorno medio e a volatidade das 1000 simulações foram iguais a aproximadamente 7% e 23% respectivamente. Sendo que o retorno maximo encontrado foi igual a 11% e a volatilidade maxima igual a 26,4%."
+        "O retorno médio e a volatilidade das 1000 simulações foram iguais a aproximadamente 7% e 23% respectivamente. Sendo que o retorno maximo encontrado foi igual a 11% e a volatilidade maxima igual a 26,4%."
       ],
       "metadata": {
         "id": "9hDHpE9M-bIw"
