--- a/Risco_entre_ações.ipynb
+++ b/Risco_entre_ações.ipynb
@@ -539,7 +539,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As duas ações consideradas, PETR4 e SHEL, apresentam uma alta taxa de correlação igual a 48,8%. Isso se deve ao fato do mercado de que as empresas petroliferas são altamente impactadas devido a choques de oferta desta commoditie, além de outros fatores macroeconomicos, como inflação, câmbio etc."
+        "As duas ações consideradas, PETR4 e SHEL, apresentam uma alta taxa de correlação igual a 48,8%. Isso se deve ao fato do mercado de que as empresas petroliferas estão inseridas, são altamente impactadas devido a choques de oferta desta commoditie, além de outros fatores macroeconomicos, como inflação, câmbio etc."
       ],
       "metadata": {
         "id": "RoD6wqqQZWuB"
